// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translates a long microblog post 1`] = `
Array [
  Object {
    "action": "tweet",
    "body": "Spicy jalapeno meatloaf shoulder sirloin, cow frankfurter tail pork belly leberkas brisket chuck pancetta bresaola. Shankle chuck rump kielbasa burgdoggen. Filet mignon turkey doner t-bone bresaola, ribeye biltong. Shank biltong kevin pork pancetta frankfurter, turkey (1/3)",
    "mediaURLs": Array [],
  },
  Object {
    "action": "tweet",
    "body": "tongue pork loin doner turducken drumstick jerky boudin t-bone.

Pancetta shank boudin, tail corned beef tenderloin kevin buffalo sausage tri-tip. T-bone landjaeger porchetta corned beef. Spare ribs strip steak bresaola ham pancetta prosciutto. T-bone turkey fatback, (2/3)",
    "mediaURLs": Array [],
  },
  Object {
    "action": "tweet",
    "body": "turducken pork pig cow jerky short loin ball tip. Boudin ball tip brisket, shankle chuck ham frankfurter hamburger buffalo landjaeger. (3/3)",
    "mediaURLs": Array [],
  },
]
`;

exports[`translates a microblog post with images 1`] = `
Array [
  Object {
    "action": "tweet",
    "body": "This is a tweet with media.",
    "mediaURLs": Array [
      "https://example.com/foo.jpg",
    ],
  },
]
`;

exports[`translates a retweet with a comment 1`] = `
Array [
  Object {
    "action": "tweet",
    "body": "And I’m sitting here with two level 117 characters. https://twitter.com/Warcraft/status/1042485327267422208",
    "mediaURLs": Array [],
  },
]
`;

exports[`translates a retweet without comment 1`] = `
Array [
  Object {
    "action": "retweet",
    "tweetID": "1042485327267422208",
  },
]
`;

exports[`translates short microblog post 1`] = `
Array [
  Object {
    "action": "tweet",
    "body": "This is a simple tweet.",
    "mediaURLs": Array [],
  },
]
`;

exports[`translates titled post 1`] = `
Array [
  Object {
    "action": "tweet",
    "body": "Welcome to Microblogging https://example.com/abc/",
    "mediaURLs": Array [],
  },
]
`;
